--- a/package.json
+++ b/package.json
@@ -7,9 +7,17 @@
     "prepare": "husky install",
     "start": "next dev",
     "build": "next build",
-    "postbuild": "next-sitemap"
+    "postbuild": "next-sitemap",
+    "test": "jest",
+    "test:watch": "jest --watch"
   },
   "dependencies": {
+    "@chakra-ui/react": "^3.16.0",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@tanstack/react-query": "^5.74.3",
+    "axios": "^1.8.4",
+    "framer-motion": "^12.7.3",
     "next": "13.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0"
@@ -17,6 +25,9 @@
   "devDependencies": {
     "@commitlint/cli": "^17.4.4",
     "@commitlint/config-conventional": "^17.4.4",
+    "@tanstack/react-query-devtools": "^5.74.3",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.3.0",
     "@types/node": "18.15.0",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
@@ -25,6 +36,8 @@
     "eslint-config-next": "13.2.4",
     "eslint-config-prettier": "^8.7.0",
     "husky": "^8.0.3",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "lint-staged": "^13.1.2",
     "next-sitemap": "^4.0.6",
     "postcss": "^8.4.21",
