--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "test:watch": "jest --watch"
   },
   "dependencies": {
-    "@chakra-ui/react": "^3.16.0",
+    "@chakra-ui/react": "2.8.0",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@tanstack/react-query": "^5.74.3",
@@ -25,6 +25,7 @@
   "devDependencies": {
     "@commitlint/cli": "^17.4.4",
     "@commitlint/config-conventional": "^17.4.4",
+    "@swc/helpers": "^0.5.17",
     "@tanstack/react-query-devtools": "^5.74.3",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
