--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "framer-motion": "^12.7.3",
     "next": "13.2.4",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "recharts": "^2.15.2"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.4.4",
