--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "framer-motion": "^12.7.3",
     "next": "13.2.4",
     "react": "18.2.0",
+    "react-datepicker": "^8.3.0",
+    "react-day-picker": "^9.6.7",
     "react-dom": "18.2.0",
     "recharts": "^2.15.2"
   },
@@ -32,6 +34,7 @@
     "@testing-library/react": "^16.3.0",
     "@types/node": "18.15.0",
     "@types/react": "18.0.28",
+    "@types/react-datepicker": "^7.0.0",
     "@types/react-dom": "18.0.11",
     "autoprefixer": "^10.4.14",
     "eslint": "8.36.0",
