--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -2,5 +2,14 @@
   "extends": [
     "stylelint-config-standard",
     "stylelint-config-standard-scss"
-  ]
+  ],
+  "rules": {
+    "scss/at-import-partial-extension": null,
+    "declaration-empty-line-before": null,
+    "scss/no-global-function-names": null,
+    "scss/dollar-variable-empty-line-before": null,
+    "color-function-notation": null,
+    "alpha-value-notation": null,
+    "at-rule-empty-line-before": null
+  }
 }
