--- a/package.json
+++ b/package.json
@@ -29,14 +29,17 @@
   "devDependencies": {
     "@commitlint/cli": "^17.4.4",
     "@commitlint/config-conventional": "^17.4.4",
+    "@jest/globals": "^29.7.0",
     "@swc/helpers": "^0.5.17",
     "@tanstack/react-query-devtools": "^5.74.3",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
+    "@types/jest": "^29.5.14",
     "@types/node": "18.15.0",
     "@types/react": "18.0.28",
     "@types/react-datepicker": "^7.0.0",
     "@types/react-dom": "18.0.11",
+    "@types/testing-library__jest-dom": "^6.0.0",
     "autoprefixer": "^10.4.14",
     "eslint": "8.36.0",
     "eslint-config-next": "13.2.4",
